--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-swipeable": "^7.0.1",
     "styled-components": "^6.1.8",
+    "swiper": "^11.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
