--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-speech-recognition": "^3.10.0",
     "react-swipeable": "^7.0.1",
     "styled-components": "^6.1.8",
     "swiper": "^11.0.6",
